deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
spec:
  selector:
    matchLabels:
      app: prometheus
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
        env: production
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: gcr.io/dd-decaf-cfbf6/prometheus:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        resources:
          requests:
            cpu: "10m"
            memory: "2Gi"
          limits:
            cpu: "500m"
        volumeMounts:
          - mountPath: "/prometheus"
            name: prometheus
        securityContext:
          runAsUser: 0
      - name: grafana
        image: grafana/grafana:5.0.4
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "10m"
            memory: "256Mi"
          limits:
            cpu: "100m"
        volumeMounts:
          - mountPath: "/var/lib/grafana"
            name: grafana
      - name: blackbox-exporter
        image: prom/blackbox-exporter
        ports:
        - containerPort: 9115
        resources:
          requests:
            cpu: "10m"
            memory: "128Mi"
          limits:
            cpu: "100m"
      volumes:
        - name: prometheus
          persistentVolumeClaim:
           claimName: prometheus
        - name: grafana
          persistentVolumeClaim:
           claimName: grafana
