service.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
    env: production
  ports:
  - name: prometheus
    protocol: TCP
    port: 9090
    targetPort: 9090
  - name: grafana
    protocol: TCP
    port: 3000
    targetPort: 3000
