ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: metrics.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 3000
